# gatemanager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEBL Parking.pyw  README.md  ROADMAP.md  compilar.bat  iniciar_gui.vbs  lebl_parking.spec  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  labels.yml  release.yml
airports/LEBB/: config.json  parkings.json
airports/LEBL/: airlines.json  config.json  parkings.json
app/: aurora_bridge.py  callsign_analyzer.py  parking_finder.py  theme.py
app/core/: airport.py
app/gui/: app_window.py
app/gui/panels/: assignments_dialog.py  left_panel.py  occupied_dialog.py  right_panel.py
data/: cargo_airlines.json
dev/: INSTRUCCIONES.md  pdc_to_json.py  validate_airport.py
docs/: ADDING_AN_AIRPORT.md
tests/: test_callsign_analyzer.py  test_parking_finder.py
