[project]
name = "gatemanager"
version = "3.0.2"
description = "Herramienta de asignación de parkings y gates para ATC virtual en IVAO"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# Sin dependencias externas en tiempo de ejecución (solo stdlib + tkinter)

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501 line-too-long: no se fuerza en este proyecto
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
