[project]
name = "gatemanager"
version = "3"
dynamic = []
description = "Herramienta de asignación de parkings y gates para ATC virtual en IVAO"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# Sin dependencias externas en tiempo de ejecución (solo stdlib + tkinter)

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line-too-long: no se fuerza en este proyecto
    "E402",  # module-import-not-at-top: intencional en app_window.py (tkinter lazy import)
    "E722",  # bare-except: intencional en código existente
    "E731",  # lambda-assignment: intencional en código existente
    "E741",  # ambiguous-variable-name: variable `l` en código existente
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
